[gd_scene load_steps=8 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Player1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Split.png" type="Texture" id=4]
[ext_resource path="res://WorldEnvironment.tres" type="Environment" id=5]
[ext_resource path="res://back2.tres" type="TileSet" id=6]

[sub_resource type="ButtonGroup" id=1]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 65536, 1, 0, 0, 2, 0, 1, 3, 0, 131073, 4, 0, 131076, 5, 0, 65537, 6, 0, 131075, 7, 0, 3, 8, 0, 196608, 9, 0, 196612, 10, 0, 131073, 11, 0, 0, 12, 0, 65536, 13, 0, 262145, 14, 0, 131072, 15, 0, 196610, 16, 0, 65537, 17, 0, 131076, 18, 0, 196609, 65536, 0, 3, 65537, 0, 131072, 65538, 0, 196608, 65539, 0, 0, 65540, 0, 196611, 65541, 0, 65537, 65542, 0, 3, 65543, 0, 196609, 65544, 0, 65537, 65545, 0, 262145, 65546, 0, 196608, 65547, 0, 65538, 65548, 0, 262145, 65549, 0, 196610, 65550, 0, 131072, 65551, 0, 196612, 65552, 0, 262147, 65553, 0, 4, 65554, 0, 65540, 131072, 0, 65537, 131073, 0, 65540, 131074, 0, 131072, 131075, 0, 262147, 131076, 0, 262148, 131077, 0, 65537, 131078, 0, 2, 131079, 0, 262147, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 131073, 131085, 0, 0, 131086, 0, 196611, 131087, 0, 131076, 131088, 0, 2, 131089, 0, 65536, 131090, 0, 262147, 196608, 0, 262146, 196609, 0, 196612, 196610, 0, 65536, 196611, 0, 196608, 196612, 0, 196608, 196613, 1610612736, 196611, 196614, 1610612736, 262148, 196615, 0, 1, 196616, 0, 262145, 196617, 0, 1, 196618, 0, 196611, 196619, 0, 131076, 196620, 0, 131072, 196621, 0, 196612, 196622, 0, 262144, 196623, 0, 65539, 196624, 0, 196612, 196625, 0, 196611, 196626, 0, 196609, 262144, 0, 196612, 262145, 0, 131075, 262146, 0, 1, 262147, 0, 0, 262148, 0, 262148, 262149, 0, 65537, 262150, 0, 262146, 262151, 0, 3, 262152, 0, 65540, 262153, 0, 196609, 262154, 0, 196608, 262155, 0, 3, 262156, 0, 262148, 262157, 0, 65537, 262158, 0, 131072, 262159, 0, 4, 262160, 0, 196611, 262161, 0, 3, 262162, 0, 262146, 327680, 0, 131076, 327681, 0, 131076, 327682, 0, 1, 327683, 0, 131076, 327684, 0, 196609, 327685, 0, 65539, 327686, 0, 2, 327687, 0, 65537, 327688, 0, 196611, 327689, 0, 262146, 327690, 0, 262144, 327691, 0, 131073, 327692, 0, 3, 327693, 0, 196609, 327694, 0, 1, 327695, 0, 262145, 327696, 0, 196611, 327697, 0, 131075, 327698, 0, 2, 393216, 0, 0, 393217, 0, 65537, 393218, 0, 65540, 393219, 0, 262144, 393220, 0, 196610, 393221, 0, 196611, 393222, 0, 262147, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 262145, 393226, 0, 3, 393227, 0, 65537, 393228, 0, 65538, 393229, 0, 262148, 393230, 0, 131075, 393231, 0, 2, 393232, 0, 4, 393233, 0, 196608, 393234, 0, 262148, 458752, 0, 196611, 458753, 0, 196612, 458754, 1610612736, 196608, 458755, 0, 131073, 458756, 0, 131073, 458757, 0, 262146, 458758, 0, 262147, 458759, 0, 262148, 458760, 0, 196610, 458761, 0, 196611, 458762, 0, 196612, 458763, 0, 262148, 458764, 0, 262146, 458765, 0, 262148, 458766, 0, 1, 458767, 0, 1, 458768, 0, 3, 458769, 0, 262148, 458770, 0, 2, 524288, 0, 131072, 524289, 0, 262145, 524290, 0, 131072, 524291, 0, 196608, 524292, 0, 65539, 524293, 0, 262146, 524294, 0, 262147, 524295, 0, 262148, 524296, 0, 196610, 524297, 0, 196611, 524298, 0, 196612, 524299, 0, 262148, 524300, 0, 262146, 524301, 0, 262148, 524302, 0, 2, 524303, 0, 262145, 524304, 0, 65538, 524305, 0, 0, 524306, 0, 196610, 589824, 0, 131073, 589825, 0, 131074, 589826, 0, 131076, 589827, 0, 131075, 589828, 0, 262144, 589829, 0, 2, 589830, 0, 262147, 589831, 0, 196608, 589832, 0, 262148, 589833, 0, 65538, 589834, 0, 262148, 589835, 0, 0, 589836, 0, 4, 589837, 0, 262146, 589838, 0, 131076, 589839, 0, 2, 589840, 0, 65536, 589841, 0, 65539, 589842, 0, 131076, 655360, 0, 65536, 655361, 0, 196609, 655362, 0, 131074, 655363, 0, 131072, 655364, 0, 3, 655365, 0, 131072, 655366, 0, 65538, 655367, 0, 196608, 655368, 0, 196611, 655369, 0, 196610, 655370, 0, 131076, 655371, 0, 196611, 655372, 0, 131073, 655373, 0, 65536, 655374, 0, 196609, 655375, 1610612736, 196609, 655376, 1610612736, 65536, 655377, 0, 262147, 655378, 0, 65537, 720896, 0, 65539, 720897, 0, 262148, 720898, 0, 65536, 720899, 0, 65538, 720900, 0, 196611, 720901, 0, 131074, 720902, 0, 196611, 720903, 0, 196608, 720904, 0, 131074, 720905, 0, 131075, 720906, 0, 262144, 720907, 0, 131076, 720908, 0, 131072, 720909, 0, 262148, 720910, 0, 131072, 720911, 1610612736, 65538, 720912, 0, 262145, 720913, 0, 262145, 720914, 0, 131073, 786432, 0, 131072, 786433, 0, 65539, 786434, 0, 131075, 786435, 0, 196608, 786436, 0, 65540, 786437, 0, 65536, 786438, 0, 3, 786439, 0, 262148, 786440, 0, 0, 786441, 0, 196612, 786442, 0, 196608, 786443, 0, 262146, 786444, 0, 1, 786445, 0, 262146, 786446, 0, 131073, 786447, 0, 131072, 786448, 0, 3, 786449, 0, 65536, 786450, 0, 196612, 851968, 0, 3, 851969, 0, 4, 851970, 0, 131072, 851971, 0, 2, 851972, 0, 1, 851973, 0, 65538, 851974, 0, 131073, 851975, 0, 196611, 851976, 0, 65540, 851977, 0, 65540, 851978, 0, 65537, 851979, 0, 131072, 851980, 0, 65536, 851981, 0, 131072, 851982, 0, 3, 851983, 0, 262146, 851984, 0, 196612, 851985, 0, 196612, 851986, 0, 196611, 917504, 0, 3, 917505, 0, 262148, 917506, 0, 2, 917507, 0, 65536, 917508, 0, 131072, 917509, 0, 196610, 917510, 0, 1, 917511, 0, 196609, 917512, 0, 65536, 917513, 0, 196611, 917514, 0, 262148, 917515, 0, 196609, 917516, 0, 3, 917517, 0, 262147, 917518, 0, 65538, 917519, 0, 3, 917520, 0, 65538, 917521, 0, 131074, 917522, 0, 0, 983040, 0, 131074, 983041, 0, 196611, 983042, 0, 196612, 983043, 0, 65538, 983044, 0, 65537, 983045, 0, 2, 983046, 0, 196612, 983047, 0, 196612, 983048, 0, 262146, 983049, 0, 131074, 983050, 0, 65537, 983051, 0, 65537, 983052, 0, 262145, 983053, 0, 262147, 983054, 0, 65536, 983055, 0, 262148, 983056, 0, 196610, 983057, 0, 65537, 983058, 0, 196608, 1048576, 0, 196610, 1048577, 0, 262145, 1048578, 0, 196608, 1048579, 0, 4, 1048580, 0, 262146, 1048581, 0, 131075, 1048582, 0, 196608, 1048583, 0, 1, 1048584, 0, 196609, 1048585, 0, 131074, 1048586, 0, 262144, 1048587, 0, 131074, 1048588, 0, 196611, 1048589, 0, 65537, 1048590, 0, 65537, 1048591, 0, 131072, 1048592, 0, 131072, 1048593, 0, 262144, 1048594, 0, 65538, 1114112, 0, 131073, 1114113, 0, 196609, 1114114, 0, 196610, 1114115, 0, 196608, 1114116, 0, 131074, 1114117, 0, 262148, 1114118, 0, 65536, 1114119, 0, 131073, 1114120, 0, 131075, 1114121, 0, 196608, 1114122, 0, 262146, 1114123, 0, 131072, 1114124, 0, 65540, 1114125, 0, 262145, 1114126, 0, 262146, 1114127, 0, 131072, 1114128, 0, 131075, 1114129, 0, 196609, 1114130, 0, 262145, 1179648, 0, 196608, 1179649, 0, 131072, 1179650, 0, 65538, 1179651, 0, 65539, 1179652, 0, 196609, 1179653, 0, 196610, 1179654, 0, 196610, 1179655, 0, 196611, 1179656, 0, 262144, 1179657, 0, 1, 1179658, 0, 2, 1179659, 0, 131076, 1179660, 0, 65539, 1179661, 0, 262144, 1179662, 0, 131074, 1179663, 0, 196608, 1179664, 0, 65540, 1179665, 0, 131073, 1179666, 0, 131073 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, -46 )

[node name="Title" type="Sprite" parent="Node2D"]
light_mask = 0
position = Vector2( 305, 307.655 )
texture = ExtResource( 4 )

[node name="Player1" parent="Node2D" instance=ExtResource( 2 )]
position = Vector2( 305, 237.179 )
is_interactive = false

[node name="Player2" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 304, 383.655 )
is_interactive = false

[node name="Line2D" type="Line2D" parent="Node2D"]
light_mask = 0
position = Vector2( 0, 2 )
points = PoolVector2Array( 224, 300, 383, 300 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
anchor_right = 300.0
anchor_bottom = 300.0
margin_left = 300.0
margin_top = 225.0
margin_right = 300.0
margin_bottom = 225.0
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = -132.0
margin_top = -194.0
margin_right = 131.0
margin_bottom = 194.0
custom_constants/separation = 10

[node name="Desc" type="Label" parent="CenterContainer/VBoxContainer"]
light_mask = 0
margin_right = 263.0
margin_bottom = 388.0
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
text = "Maya is a manananggal whose two halves
got lost and must reunite before sunrise

* Split screen can be merged/unmerged
* Salt prevents reuniting

















"
align = 1
valign = 1

[node name="Text" type="Node2D" parent="."]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
position = Vector2( 17, -16 )

[node name="HBoxContainer" type="HBoxContainer" parent="Text"]
margin_left = 67.1843
margin_top = 358.273
margin_right = 330.184
margin_bottom = 491.273
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" type="Label" parent="Text/HBoxContainer"]
light_mask = 0
margin_left = 14.0
margin_top = 42.0
margin_right = 169.0
margin_bottom = 90.0
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
text = "Control Upper Half  
Control Lower Half  
Merge/Unmerge Screen "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys2" type="Label" parent="Text/HBoxContainer"]
light_mask = 0
margin_left = 173.0
margin_top = 42.0
margin_right = 248.0
margin_bottom = 90.0
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
text = " W, A, S, D
 Arrow Keys
 Spacebar"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Text"]
margin_left = 297.0
margin_top = 366.0
margin_right = 560.0
margin_bottom = 499.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" type="Label" parent="Text/HBoxContainer2"]
light_mask = 0
margin_left = 71.0
margin_top = 34.0
margin_right = 162.0
margin_bottom = 99.0
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
text = "Restart Level  
Toggle Music  
Title Screen  
"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys2" type="Label" parent="Text/HBoxContainer2"]
light_mask = 0
margin_left = 166.0
margin_top = 34.0
margin_right = 191.0
margin_bottom = 99.0
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 1 )
text = " R
 M
 Esc
"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 118.0
margin_top = 452.0
margin_right = 484.0
margin_bottom = 568.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
margin_right = 62.0
margin_bottom = 116.0
custom_constants/separation = 4

[node name="Button1" type="Button" parent="Buttons/VBoxContainer"]
light_mask = 0
margin_right = 62.0
margin_bottom = 20.0
group = SubResource( 1 )
text = "Level 1 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Buttons/VBoxContainer"]
light_mask = 0
margin_top = 24.0
margin_right = 62.0
margin_bottom = 44.0
text = "Level 2 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Buttons/VBoxContainer"]
light_mask = 0
margin_top = 48.0
margin_right = 62.0
margin_bottom = 68.0
text = "Level 3 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="Buttons/VBoxContainer"]
light_mask = 0
margin_top = 72.0
margin_right = 62.0
margin_bottom = 92.0
text = "Level 4 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="Buttons/VBoxContainer"]
light_mask = 0
margin_top = 96.0
margin_right = 62.0
margin_bottom = 116.0
text = "Level 5 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Buttons"]
margin_left = 72.0
margin_right = 138.0
margin_bottom = 116.0
custom_constants/separation = 4

[node name="Button6" type="Button" parent="Buttons/VBoxContainer2"]
light_mask = 0
margin_right = 66.0
margin_bottom = 20.0
text = "Level 6 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="Buttons/VBoxContainer2"]
light_mask = 0
margin_top = 24.0
margin_right = 66.0
margin_bottom = 44.0
text = "Level 7 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="Buttons/VBoxContainer2"]
light_mask = 0
margin_top = 48.0
margin_right = 66.0
margin_bottom = 68.0
text = "Level 8 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="Buttons/VBoxContainer2"]
light_mask = 0
margin_top = 72.0
margin_right = 66.0
margin_bottom = 92.0
text = "Level 9 "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button10" type="Button" parent="Buttons/VBoxContainer2"]
light_mask = 0
margin_top = 96.0
margin_right = 66.0
margin_bottom = 116.0
text = "Level 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer3" type="VBoxContainer" parent="Buttons"]
margin_left = 148.0
margin_right = 214.0
margin_bottom = 116.0
custom_constants/separation = 4

[node name="Button11" type="Button" parent="Buttons/VBoxContainer3"]
light_mask = 0
margin_right = 66.0
margin_bottom = 20.0
text = "Level 11"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button12" type="Button" parent="Buttons/VBoxContainer3"]
light_mask = 0
margin_top = 24.0
margin_right = 66.0
margin_bottom = 44.0
text = "Level 12"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button13" type="Button" parent="Buttons/VBoxContainer3"]
light_mask = 0
margin_top = 48.0
margin_right = 66.0
margin_bottom = 68.0
text = "Level 13"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button14" type="Button" parent="Buttons/VBoxContainer3"]
light_mask = 0
margin_top = 72.0
margin_right = 66.0
margin_bottom = 92.0
text = "Level 14"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button15" type="Button" parent="Buttons/VBoxContainer3"]
light_mask = 0
margin_top = 96.0
margin_right = 66.0
margin_bottom = 116.0
text = "Level 15"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer4" type="VBoxContainer" parent="Buttons"]
margin_left = 224.0
margin_right = 290.0
margin_bottom = 116.0
custom_constants/separation = 4

[node name="Button16" type="Button" parent="Buttons/VBoxContainer4"]
light_mask = 0
margin_right = 66.0
margin_bottom = 20.0
text = "Level 16"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button17" type="Button" parent="Buttons/VBoxContainer4"]
light_mask = 0
margin_top = 24.0
margin_right = 66.0
margin_bottom = 44.0
text = "Level 17"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button18" type="Button" parent="Buttons/VBoxContainer4"]
light_mask = 0
margin_top = 48.0
margin_right = 66.0
margin_bottom = 68.0
text = "Level 18"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button19" type="Button" parent="Buttons/VBoxContainer4"]
light_mask = 0
margin_top = 72.0
margin_right = 66.0
margin_bottom = 92.0
text = "Level 19"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button20" type="Button" parent="Buttons/VBoxContainer4"]
light_mask = 0
margin_top = 96.0
margin_right = 66.0
margin_bottom = 116.0
text = "Level 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer5" type="VBoxContainer" parent="Buttons"]
margin_left = 300.0
margin_right = 366.0
margin_bottom = 116.0
custom_constants/separation = 4

[node name="Button21" type="Button" parent="Buttons/VBoxContainer5"]
light_mask = 0
margin_right = 66.0
margin_bottom = 20.0
text = "Level 21"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button22" type="Button" parent="Buttons/VBoxContainer5"]
light_mask = 0
margin_top = 24.0
margin_right = 66.0
margin_bottom = 44.0
text = "Level 22"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button23" type="Button" parent="Buttons/VBoxContainer5"]
light_mask = 0
margin_top = 48.0
margin_right = 66.0
margin_bottom = 68.0
text = "Level 23"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button24" type="Button" parent="Buttons/VBoxContainer5"]
light_mask = 0
margin_top = 72.0
margin_right = 66.0
margin_bottom = 92.0
text = "Level 24"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button25" type="Button" parent="Buttons/VBoxContainer5"]
light_mask = 0
margin_top = 96.0
margin_right = 66.0
margin_bottom = 116.0
text = "Level 25"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndingButton" type="Button" parent="."]
light_mask = 0
margin_left = 272.0
margin_top = 573.0
margin_right = 326.0
margin_bottom = 593.0
text = "Ending"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/VBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer2/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer2/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer2/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer2/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer2/Button10" to="." method="_on_Button10_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer3/Button11" to="." method="_on_Button11_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer3/Button12" to="." method="_on_Button12_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer3/Button13" to="." method="_on_Button13_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer3/Button14" to="." method="_on_Button14_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer3/Button15" to="." method="_on_Button15_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer4/Button16" to="." method="_on_Button16_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer4/Button17" to="." method="_on_Button17_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer4/Button18" to="." method="_on_Button18_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer4/Button19" to="." method="_on_Button19_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer4/Button20" to="." method="_on_Button20_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer5/Button21" to="." method="_on_Button21_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer5/Button22" to="." method="_on_Button22_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer5/Button23" to="." method="_on_Button23_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer5/Button24" to="." method="_on_Button24_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer5/Button25" to="." method="_on_Button25_pressed"]
[connection signal="pressed" from="EndingButton" to="." method="_on_EndingButton_pressed"]
